# TetraPodPlatform

./: .gitignore  .gitmodules  README.md  kinematics.hpp  platformio.ini  viewer.cpp
src/: kinematics.hpp  main.cpp
viewer/: CMakeLists.txt
